--- a/FreelanceWebServer/FreelanceWebServer/Views/Home/Index.cshtml
+++ b/FreelanceWebServer/FreelanceWebServer/Views/Home/Index.cshtml
@@ -1,1 +1,12 @@
-﻿<h1>Chef's Honor Home Page</h1>
+﻿@model IEnumerable<FreelanceWebServer.Models.DTO.UserDTO>
+
+<h1>Chef's Honor Home Page</h1>
+Users:
+<ul>
+    @foreach (var user in Model)
+    {
+        <li>
+            @($"{user.Surname} {user.Name}")
+        </li>
+    }
+</ul>
